<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/major_LL_height">
            <TextView
                android:text="@string/app_name"
                style="@style/textTopMainStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            style="@style/buttonMainStyle"
            android:layout_marginStart="@dimen/layout_marginStart_End"
            android:layout_marginTop="@dimen/search_btn_top_margin"
            android:layout_marginEnd="@dimen/layout_marginStart_End"
            android:layout_marginBottom="@dimen/search_and_media_btn_bottom_margin"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/btn_media"
            android:layout_marginStart="@dimen/layout_marginStart_End"
            android:layout_marginEnd="@dimen/layout_marginStart_End"
            android:layout_marginBottom="@dimen/search_and_media_btn_bottom_margin"
            android:text="@string/media"
            app:icon="@drawable/media"
            style="@style/buttonMainStyle" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_marginStart="@dimen/layout_marginStart_End"
            android:layout_marginEnd="@dimen/layout_marginStart_End"
            android:layout_marginBottom="@dimen/setting_btn_bottom_margin"
            android:text="@string/setting"
            app:icon="@drawable/setting"
            style="@style/buttonMainStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>